--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
+  "homepage": ".",
   "name": "ksd",
   "version": "0.1.0",
-  "homepage": "http://krotzersoftwaredevelopment.com",
   "private": true,
   "dependencies": {
     "@devexpress/dx-react-core": "^2.6.0",
