--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "homepage": ".",
   "name": "ksd",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@devexpress/dx-react-core": "^2.6.0",
@@ -9,15 +9,22 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.0",
+    "cors": "^2.8.5",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.0",
     "react-form": "^4.0.1",
+    "react-google-recaptcha": "^2.1.0",
     "react-particle-image": "^1.0.1",
     "react-particles": "0.0.3",
     "react-particles-js": "^2.7.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-transition-group": "^4.4.1",
     "reactstrap": "^8.4.1",
+    "styled-components": "^5.2.0",
     "yarn": "^1.22.4"
   },
   "scripts": {
