--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bootstrap": "^4.5.0",
     "cors": "^2.8.5",
     "react": "^16.13.0",
-    "react-bootstrap": "^1.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.0",
     "react-form": "^4.0.1",
     "react-google-recaptcha": "^2.1.0",
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-transition-group": "^4.4.1",
+    "reactjs-captcha": "^1.3.1",
     "reactstrap": "^8.4.1",
     "styled-components": "^5.2.0",
     "yarn": "^1.22.4"
