--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "react-dom": "^16.13.0",
     "react-form": "^4.0.1",
     "react-google-recaptcha": "^2.1.0",
+    "react-measure": "^2.5.2",
     "react-particle-image": "^1.0.1",
     "react-particles": "0.0.3",
     "react-particles-js": "^2.7.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-spring": "^8.0.27",
     "react-transition-group": "^4.4.1",
     "reactjs-captcha": "^1.3.1",
     "reactstrap": "^8.4.1",
